# grantscraper

./: README.md  auscouncil.json  auscouncilgrants.py  creativevic.json  data.json  grantlinks.txt  grantscraper.py  index.html  pyproject.toml
css/: style.css
grantscraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
js/: script.js
json/: ausdata.json  creativevic.json
