[tool.poetry]
name = "grantscraper"
version = "0.1.0"
description = "scrapes grants"
authors = ["Liam <liamfpower@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
